# Work_Compliance_Analysis_System

./: CMakeLists.txt  README.md  main.cpp
Common/Formats/Date Format/: Date.h
Common/Methods/GetInformationMethods/: GetInfo.cpp
Common/Methods/MenuMethods/: SelectOptionNumber.cpp
Formats/Date Format/: Date.cpp  Date.h
Methods/GetInformationMethods/: GetInfo.cpp
Methods/MenuMethods/: MenuMethods.cpp  MenuMethods.h
Src/Adversitement/: Adversitement.cpp  Adversitement.h
Src/Company/: Company.cpp  Company.h
Src/Company/Company/: CompanyInformation.cpp  CompanyInformation.h
Src/User/: EducationInformation.h  ExamInformation.cpp  ExamsInformations.cpp  ExamsInformations.h
Src/User/Candidate/: User.cpp  User.h
Src/User/Candidate CV/Certificates/: Certificates.cpp  Certificates.h
Src/User/Candidate CV/Communication Information/: CommunicationInformation.cpp  CommunicationInformation.h
Src/User/Candidate CV/Education Information/: EducationInformation.cpp  EducationInformation.h
Src/User/Candidate CV/Exams Information/: ExamInformation.cpp  ExamInformation.h
Src/User/Candidate CV/Expertise Areas/: ExpertiseAreas.cpp  ExpertiseAreas.h
Src/User/Candidate CV/Foreign Languages/: ForeignLanguage.cpp  ForeignLanguage.h
Src/User/Candidate CV/Hobies/: Hobie.cpp  Hobie.h  Hobies.cpp  Hobies.h
Src/User/Candidate CV/Personal Documents/: PersonalDocument.cpp  PersonalDocument.h  PersonalDocuments.cpp  PersonalDocuments.h
Src/User/Candidate CV/Projects/: Projects.cpp  Projects.h
Src/User/Candidate CV/Refarance/: Refarance.cpp  Refarance.h
Src/User/Candidate CV/Social Skills/: SocialSkills.cpp  SocialSkills.h
Src/User/Candidate CV/Work Conditions/: WorkConditions.cpp  WorkConditions.h
Src/User/Candidate CV/Work Experiences/: WorkExperience.cpp  WorkExperience.h
src/Formats/: Date.cpp
src/Methods/MenuMethods/: SelectOptionNumber.cpp
src/User/: EducationInformation.cpp  EducationInformation.h  ExamInformation.h  ExpertiseAreas.h  ForeignLanguage.cpp  ForeignLanguage.h  Hobies.h  LanguageSkills.cpp  LanguageSkills.h  PersonalDocuments.cpp  PersonalDocuments.h  PersonalInformation.cpp  PersonalInformation.h  Referances.cpp  Referances.h  Sertificates.cpp  Sertificates.h  SocialSkills.h  SpecialExceptions.cpp  SpecialExceptions.h  User.cpp  User.h  WorkConditions.h  WorkExperience.h  WorkExperiences.cpp  WorkExperiences.h
